--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
             <div class="container-imagem">
                 <img src="img/imagem1.png" alt="" class="main-imagem">
             </div>
-            <button>Carregar imagem</button>
+            <button id="upload-btn">Carregar imagem</button>
+            <input type="file" id="image-upload" accept="image/" style="display: none" /> 
             <div class="container-imagem-nome">
                 <p>image_projeto.png</p>
                 <img src="img/close.svg">
@@ -68,7 +69,7 @@
                     <input type="text" id="nome" name="nome">
                 </div>
                 <div>
-                    <label for="descricao">Descrição do Projeto</label>
+                    <label for="descricao">Descricao</label>
                     <textarea id="descricao" name="descricao"></textarea>
                 </div>
                 <div>
@@ -89,7 +90,7 @@
         </div>
     </main>
 
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
 </body>
 
 </html>
